--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,38 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+
+.inter-light {
+  font-family: "Inter", system-ui;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.inter-bold {
+  font-family: "Inter", system-ui;
+  font-optical-sizing: auto;
+  font-weight: 800;
+  font-style: bold;
+}
+
 #root {
-  max-width: 1280px;
+  --bg-light: #fcfcfd;
+  --divider: #e0e1e6;
+  --nav: #e7e8ec;
+  --text-dark: #1e1f24;
+  --text-light: #743ecc;
+  --accent-med: #7c3cdd;
+  --accent-light: #d6c6ff;
+
+  --site-padding: 0 15vw;
+
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  padding: 0rem;
+  font-family: "Inter", system-ui;
+  color: var(--text-dark);
+  background-color: var(--bg-light);
+  height: 100vh;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.main-content {
+  padding: 0;
 }
