--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+* {
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: var(--text-dark);
+}
+
+a:hover,
+button:hover {
+  cursor: pointer;
+}
 
 .inter-light {
   font-family: "Inter", system-ui;
@@ -20,13 +33,14 @@
   --nav: #e7e8ec;
   --text-dark: #1e1f24;
   --text-light: #743ecc;
+  --accent-dark: #3a1b6a;
   --accent-med: #7c3cdd;
   --accent-light: #d6c6ff;
 
-  --site-padding: 0 15vw;
+  --site-padding: 2rem 15vw;
 
   margin: 0 auto;
-  padding: 0rem;
+  padding: 0;
   font-family: "Inter", system-ui;
   color: var(--text-dark);
   background-color: var(--bg-light);
@@ -35,4 +49,54 @@
 
 .main-content {
   padding: 0;
+}
+
+.home-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 230px);
+  background: url("/src/assets/homePhoto.jpg") top center no-repeat;
+  background-size: cover;
+}
+
+.home-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #e7e8ecbf;
+  width: 60%;
+  height: 50%;
+  border-radius: 100px;
+  gap: 2rem;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
+    rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+}
+
+.welcome-message {
+  font-size: 3rem;
+  font-weight: 900;
+  letter-spacing: -1px;
+  color: var(--accent-dark);
+}
+
+.welcome-tidbit {
+  color: var(--text-dark);
+  font-weight: 300;
+}
+
+.shop-now-btn {
+  color: white;
+  font-size: 1.5rem;
+  font-weight: 800;
+  border-radius: 20px;
+  background-color: var(--accent-dark);
+  border: none;
+  padding: 1rem 2rem;
+  transition: all 200ms ease;
+}
+
+.shop-now-btn:hover {
+  background-color: var(--accent-med);
 }
