Formatted for mobiles

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 * {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 a {
@@ -95,4 +97,15 @@ button:hover {
 
 .shop-now-btn:hover {
   background-color: var(--accent-med);
+}
+
+@media (max-width: 1175px) {
+  .home-content {
+    width: auto;
+    text-align: center;
+    padding: 2rem;
+  }
+  .welcome-message {
+    font-size: 2rem;
+  }
 }
