--- a/src/components/CSS/CartDrawer.css
+++ b/src/components/CSS/CartDrawer.css
@@ -5,7 +5,6 @@
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: none;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.3);
 }
@@ -84,6 +83,7 @@
   border-radius: 20px;
   box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 0px 1px,
     rgba(27, 31, 35, 0.05) 0px 0px 10px 1px;
+  width: 100%;
 }
 
 .cart-item-details {
@@ -172,4 +172,42 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+@media (max-width: 1125px) {
+  * {
+    padding: 0;
+    margin: 0;
+  }
+
+  .cartDrawer {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden; /* Prevent horizontal overflow */
+    overflow-y: auto; /* Allow vertical scrolling */
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+
+  .cartDrawer-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    z-index: 1;
+    position: fixed;
+    right: 0;
+    width: 100%; /* Ensure the drawer content takes full viewport width */
+    height: 100vh;
+    overflow-y: auto;
+    padding: 0;
+    margin: 0;
+    background-color: var(--nav);
+  }
+
+  .cart-item-card {
+    width: inherit;
+  }
 }
