--- a/src/components/CSS/Likes.css
+++ b/src/components/CSS/Likes.css
@@ -19,3 +19,37 @@
   font-size: 1.6rem;
   font-weight: 800;
 }
+
+@media (max-width: 1175px) {
+  .liked-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30%, 45%));
+    justify-content: center;
+    gap: 2vw;
+  }
+
+  .likes-title {
+    font-size: 1.4rem;
+  }
+
+  .main-likes-container {
+    padding: 2rem 1rem;
+  }
+}
+
+@media (max-width: 530px) {
+  .liked-list {
+    display: grid;
+    justify-content: center;
+    gap: 2vw;
+  }
+
+  .liked-list p {
+    font-size: 14px;
+  }
+
+  .liked-list button {
+    font-size: 14px;
+    padding: 0.8rem 1rem;
+  }
+}
