--- a/src/components/CSS/ProductCard.css
+++ b/src/components/CSS/ProductCard.css
@@ -143,3 +143,17 @@
 .btn-secondary:hover {
   color: var(--text-light);
 }
+
+@media (max-width: 1175px) {
+  .product-fav {
+    transform: scale(1.3);
+    padding: 10px;
+  }
+
+  .product-wrapper:hover {
+    cursor: pointer;
+    transform: scale(1);
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 0px 1px,
+      rgba(27, 31, 35, 0.25) 0px 0px 10px 1px;
+  }
+}
