--- a/src/components/CSS/nav.css
+++ b/src/components/CSS/nav.css
@@ -107,11 +107,22 @@
 @media (max-width: 1125px) {
   .header {
     padding: 20px;
-    width: 100%;
+  }
+
+  .logo-wrapper {
+    transform: scale(0.9);
+    padding-right: 0;
   }
 
   .nav-container {
-    font-size: 18px;
+    font-size: 1rem;
+    gap: 30px;
+  }
+}
+
+@media (max-width: 350px) {
+  .nav-container {
+    font-size: 0.7rem;
     gap: 10px;
   }
 }
