--- a/src/components/CSS/ProductCard.css
+++ b/src/components/CSS/ProductCard.css
@@ -112,7 +112,7 @@
 
 .btn-primary {
   border: none;
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: 600;
   color: white;
   background-color: var(--accent-med);
@@ -145,6 +145,10 @@
 }
 
 @media (max-width: 1175px) {
+  .product-name {
+    font-size: 15px;
+  }
+
   .product-fav {
     transform: scale(1.3);
     padding: 10px;
