--- a/src/components/CSS/Shop.css
+++ b/src/components/CSS/Shop.css
@@ -93,7 +93,7 @@
   }
 
   .shop-products button {
-    font-size: 14px;
+    font-size: 18px;
     padding: 0.8rem 1rem;
   }
 
@@ -103,5 +103,12 @@
     justify-content: flex-start;
     width: 100%;
     overflow-x: scroll;
+  }
+}
+
+@media (max-width: 320px) {
+  .shop-products button {
+    font-size: 14px;
+    padding: 0.8rem 0.5rem;
   }
 }
