--- a/src/components/CSS/CartDrawer.css
+++ b/src/components/CSS/CartDrawer.css
@@ -169,17 +169,13 @@
   transform: translate(0%, 50%);
   opacity: 50%;
   display: flex;
+  text-align: center;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 @media (max-width: 1125px) {
-  * {
-    padding: 0;
-    margin: 0;
-  }
-
   .cartDrawer {
     position: fixed;
     z-index: 1;
