--- a/src/components/CSS/Likes.css
+++ b/src/components/CSS/Likes.css
@@ -33,11 +33,15 @@
   }
 
   .main-likes-container {
-    padding: 2rem 1rem;
+    padding: var(--site-padding);
   }
 }
 
 @media (max-width: 530px) {
+  .main-likes-container {
+    padding: 2rem 1rem;
+  }
+
   .liked-list {
     display: grid;
     justify-content: center;
