--- a/src/components/CSS/nav.css
+++ b/src/components/CSS/nav.css
@@ -105,7 +105,7 @@
   cursor: pointer;
 }
 
-@media (max-width: 1125px) {
+@media (max-width: 1175px) {
   .header {
     padding: 20px;
   }
@@ -116,14 +116,21 @@
   }
 
   .nav-container {
-    font-size: 1rem;
+    font-size: 1.6rem;
     gap: 30px;
   }
 }
 
-@media (max-width: 350px) {
-  .nav-container {
-    font-size: 0.7rem;
-    gap: 10px;
+@media (max-width: 530px) {
+  .header {
+    padding: 20px;
+  }
+
+  .nav-home {
+    display: none;
+  }
+
+  .likes-title {
+    text-align: center;
   }
 }
